--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://andrii-13.github.io/car-rental/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,10 +16,11 @@
     "react-dom": "^18.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
