--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
